优化layui页面模板支持日期控件和radio的动态生成

--- a/src/main/resources/template/html/layui_detail.vm
+++ b/src/main/resources/template/html/layui_detail.vm
@@ -64,6 +64,8 @@
                     var idColumn = {"label":"主键","value":record.id};
                     #elseif(${column.pageType} == "select-dict")
                     var ${column.fieldName}Column = {"label":"${column.remarks}","value":record.${column.fieldName}+':'+sys_getDictValue('$column.valueSetString',record.${column.fieldName})};
+                    #elseif(${column.pageType} == "radio-dict")
+                    var ${column.fieldName}Column = {"label":"${column.remarks}","value":record.${column.fieldName}+':'+sys_getDictValue('$column.valueSetString',record.${column.fieldName})};
                     #else
                     var ${column.fieldName}Column = {"label":"${column.remarks}","value":record.${column.fieldName}};
                     #end
