--- a/src/main/resources/template/html/layui_add.vm
+++ b/src/main/resources/template/html/layui_add.vm
@@ -47,6 +47,10 @@
                     </select>
                 #elseif(${column.pageType} == "select-dict")
                     <select name="${column.fieldName}" lay-verify="required" data-type="sysDict" data-title="${column.valueSetString}"></select>
+                #elseif(${column.pageType} == "radio-dict")
+                    <span id="${column.fieldName}View" data-type="sysDict" data-title="${column.valueSetString}" data-url="${column.fieldName}"></span>
+                #elseif(${column.pageType} == "date")
+                    <input type="text" name="${column.fieldName}" autocomplete="off" class="layui-input" id="${column.fieldName}" lay-verify="required">
                 #else
                 <input type="${column.pageType}" lay-verify="required" name="${column.fieldName}" autocomplete="off" class="layui-input">
                 #end
@@ -74,6 +78,10 @@
                     </select>
                 #elseif(${column.pageType} == "select-dict")
                     <select name="${column.fieldName}" lay-verify="" data-type="sysDict" data-title="${column.valueSetString}"></select>
+                #elseif(${column.pageType} == "radio-dict")
+                    <span id="${column.fieldName}View" data-type="sysDict" data-title="${column.valueSetString}" data-url="${column.fieldName}"></span>
+                #elseif(${column.pageType} == "date")
+                    <input type="text" name="${column.fieldName}" autocomplete="off" class="layui-input" id="${column.fieldName}">
                 #else
                 <input type="${column.pageType}" name="${column.fieldName}" autocomplete="off" class="layui-input">
                 #end
@@ -96,8 +104,15 @@
     var action = "../../../api/${table.entityLowerCamel}/add";
     layui.use(['form','laydate'], function () {
         var $ = layui.$;
-        var form = layui.form;
-
+        var form = layui.form
+                ,laydate = layui.laydate;
+#foreach($column in $table.columns)
+    #if (${column.pageType} == "date")
+        laydate.render({
+            elem:'#${column.fieldName}'
+        });
+    #end
+#end
         form.on('submit(${table.entityLowerCamel}Add-filter)', function (data) {
             sys_doAjaxPostWithForm(action, data.field, function(obj) {
                 if (parent.layer == undefined) {
