--- a/src/main/resources/template/html/layui_edit.vm
+++ b/src/main/resources/template/html/layui_edit.vm
@@ -5,15 +5,17 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../../layui/css/layui.css">
-    <link rel="stylesheet" href="../../../css/main.css">
-    <script type="text/javascript" src="../../../layui/layui.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <script type="text/javascript" src="/layui/layui.js" charset="utf-8"></script>
 </head>
 <body>
 <div class="layui-fluid">
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend>修改${table.remarks}</legend>
-</fieldset>
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12">
+            <div class="layui-card">
+                <div class="layui-card-header">修改${table.remarks}</div>
+                <div class="layui-card-body">
 <form class="layui-form" method="post" lay-filter="${table.entityLowerCamel}Edit-filter">
     #foreach($column in $table.columns)
         #if (${column.fieldName} == "id")
@@ -36,6 +38,8 @@
                     #foreach($optionItem in $column.valueSet)
                         <input type="radio" name="${column.fieldName}" value="${optionItem}" title="${optionItem}">
                     #end
+                #elseif(${column.pageType} == "radio-dict")
+                    <span id="${column.fieldName}View" data-type="sysDictFromEdit" data-title="${column.valueSetString}" data-url="${column.fieldName}"></span>
                 #elseif(${column.pageType} == "select")
                     <select name="${column.fieldName}" lay-verify="">
                         <option value=""></option>
@@ -45,6 +49,10 @@
                     </select>
                 #elseif(${column.pageType} == "select-dict")
                     <select lay-verify="required" name="${column.fieldName}"></select>
+                #elseif(${column.pageType} == "date")
+                    <input type="text" name="${column.fieldName}" id="${column.fieldName}" lay-verify="required" class="layui-input">
+                #elseif(${column.pageType} == "textarea")
+                    <textarea name="${column.fieldName}" class="layui-textarea" lay-verify="required"></textarea>
                 #else
                 <input type="${column.pageType}" lay-verify="required" name="${column.fieldName}" autocomplete="off" class="layui-input">
                 #end
@@ -76,6 +84,8 @@
                     <select name="${column.fieldName}" lay-verify=""></select>
                 #elseif(${column.pageType} == "date")
                     <input type="text" name="${column.fieldName}" id="${column.fieldName}" autocomplete="off" class="layui-input">
+                #elseif(${column.pageType} == "textarea")
+                    <textarea name="${column.fieldName}" class="layui-textarea"></textarea>
                 #else
                 <input type="${column.pageType}" name="${column.fieldName}" autocomplete="off" class="layui-input">
                 #end
@@ -91,6 +101,7 @@
         </div>
     </div>
 </form>
+</div></div></div></div>
 </div>
 </body>
 <script type="text/javascript" src="/js/system.js" charset="utf-8"></script>
@@ -125,6 +136,7 @@
         var id = sys_getParam('id');
         var getDataUrl = '/api/${table.entityLowerCamel}/queryById/' + id
         sys_doAjaxGet(getDataUrl, function(record){
+                 sys_renderDictRadioValueForEdit();
                 //表单初始赋值
                 form.val('${table.entityLowerCamel}Edit-filter', {
                 #foreach($column in $table.columns)
