--- a/src/main/resources/template/java/sys/layui_service.vm
+++ b/src/main/resources/template/java/sys/layui_service.vm
@@ -8,7 +8,8 @@ import ${table.basePackage}.c.common.vo.CommonResponse;
 import ${table.daoPackage}.${table.daoObjName};
 import ${table.basePackage}.service.exception.ServiceException;
 import org.apache.commons.lang3.StringUtils;
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -18,6 +19,8 @@ import java.util.List;
 
 @Service
 public class ${table.entityObjName}Service {
+
+    private Logger logger = LoggerFactory.getLogger(${table.entityObjName}Service.class);
 
     @Autowired
     ${table.daoObjName} ${table.entityLowerCamel}Mapper;
