--- a/src/main/resources/template/java/sys/layui_service.vm
+++ b/src/main/resources/template/java/sys/layui_service.vm
@@ -82,13 +82,13 @@ public class ${table.entityObjName}Service {
     public APIResponse add(${table.entityObjName} ${table.entityLowerCamel}) {
         String result = this.verifyAdd(${table.entityLowerCamel});
         if (StringUtils.isNotBlank(result)) {
-            return new APIResponse(APIResponse.CODE.FAILED, result);
+            return new APIResponse(EnumAPIResponse.FAILED.getCode(), result);
         }
         int affectRow = 0;
         try {
             affectRow = ${table.entityLowerCamel}Mapper.insert(${table.entityLowerCamel});
         } catch (Throwable e) {
-            return new APIResponse(APIResponse.CODE.FAILED, e.getMessage());
+            return new APIResponse(EnumAPIResponse.FAILED.getCode(), e.getMessage());
         }
         return new APIResponse().withData(affectRow).withMsg("添加成功");
     }
@@ -96,7 +96,7 @@ public class ${table.entityObjName}Service {
     public APIResponse deleteById(Long id) {
         String result = this.verifyDelete(id);
         if (StringUtils.isNotBlank(result)) {
-            return new APIResponse(APIResponse.CODE.FAILED, result);
+            return new APIResponse(EnumAPIResponse.FAILED.getCode(), result);
         }
         int affectRow = ${table.entityLowerCamel}Mapper.deleteByPrimaryKey(id);
         return new APIResponse().withData(affectRow).withMsg("删除成功");
@@ -105,7 +105,7 @@ public class ${table.entityObjName}Service {
     public APIResponse update(${table.entityObjName} ${table.entityLowerCamel}) {
         String result = this.verifyUpdate(${table.entityLowerCamel});
         if (StringUtils.isNotBlank(result)) {
-        return new APIResponse(APIResponse.CODE.FAILED, result);
+        return new APIResponse(EnumAPIResponse.FAILED.getCode(), result);
         }
         int affectRow = ${table.entityLowerCamel}Mapper.updateByPrimaryKeySelective(${table.entityLowerCamel});
         return new APIResponse().withData(affectRow).withMsg("更新成功");
