优化查询表单，增加对日期时间查询的支持

--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -59,6 +59,17 @@
                                         });
                                     });
                                 </script>
+                            #elseif(${column.pageType} == "datetime")
+                                <input type="text" name="${column.fieldName}" id="${column.fieldName}" class="layui-input" placeholder="yyyy-MM-dd HH:mm:ss">
+                                <script>
+                                    layui.use('laydate',function(){
+                                        var laydate = layui.laydate;
+                                        laydate.render({
+                                            elem: '#${column.fieldName}'
+                                            ,type: 'datetime'
+                                        });
+                                    });
+                                </script>
                             #else
                                 <input type="text" name="${column.fieldName}" id="${column.fieldName}" class="layui-input">
                             #end
