--- a/src/main/resources/template/java/sys/layui_service.vm
+++ b/src/main/resources/template/java/sys/layui_service.vm
@@ -4,9 +4,9 @@ import ${table.basePackage}.b.modules.system.domain.User;
 import ${table.basePackage}.b.modules.system.entity.${table.entityObjName};
 import ${table.basePackage}.b.modules.system.entity.${table.exampleObjName};
 import ${table.basePackage}.c.common.enums.APIResponseCodeEnum;
+import ${table.basePackage}.c.common.exception.ServiceException;
 import ${table.basePackage}.c.common.vo.APIResponse;
 import ${table.daoPackage}.${table.daoObjName};
-import ${table.basePackage}.service.exception.ServiceException;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
